Import of TNAGA/PHP-Functions-File-0.03 from CPAN.
gitpan-cpan-distribution: PHP-Functions-File
gitpan-cpan-version:      0.03
gitpan-cpan-path:         TNAGA/PHP-Functions-File-0.03.tar.gz
gitpan-cpan-author:       TNAGA
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,11 @@ version_from: lib/PHP/Functions/File.pm
 installdirs:  site
 requires:
     Compress::Zlib                 0
+    Compress::Zlib                 0
+    LWP::UserAgent                 0
+    File::Spec                     0
+    HTTP::Request                  0
+    HTTP::Response                 0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
